crates-next/otter-runtime/tests/compile_fail/tokio_spawn_value_is_not_send.stderr
error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<otter_vm::ClassConstructor>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<num_bigint::bigint::BigInt>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<SymbolBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<TemporalPayload>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<Cell<f64>>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<IntlPayload>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<ArrayBufferBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<DataViewBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<TypedArrayBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `Rc<ProxyBody>`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const ObjectBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const ArrayBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const IteratorState`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const MapBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const SetBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const WeakMapBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const WeakSetBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const WeakRefBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const FinalizationRegistryBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const BoundFunctionBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const NativeFunctionBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const JsRegExpBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const GeneratorBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(value);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_value_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_value_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(value);
  |                              ^^^^^ has type `Value` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`
